# WhiteRectFitter

./: .gitignore  CMakeLists.txt  README.md  launcher.py  player.py  preprocess.py  requirements.txt  run.bat
.claude/: settings.json
python/: player.py  preprocess.py
python/wrf/: boxes.py  constants.py  win32.py
src/: main.cpp  resource.h  wrf.rc.in
